# ssg

./: CMakeLists.txt  package.xml  setup.py
launch/: irl_topic.launch  sawyer_kinect_irl.launch  sawyer_kinect_sim.launch
scripts/: sawyer_kinect_collect.py  sawyer_kinect_irl.py  sawyer_kinect_sim.py  sawyer_moveit_from_topic_sim.py  sawyer_pose_from_point_irl.py  sawyer_pose_from_point_sim.py  sawyer_trajectory_sub_irl.py
